window size, scrollbar fixes, delete java path fixes,

--- a/front/src/css/app.css
+++ b/front/src/css/app.css
@@ -2,3 +2,16 @@
 .item-input-info {
     color: rgba(187, 187, 187, 0.68)   
 }
+
+::-webkit-scrollbar {
+    width: 0.3em;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: #007aff;
+  outline: 1px solid slategrey;
+}
